# symmetric_crypto_bench

./: Cargo.toml  barchart.p  build.rs  plot.p  transform.pl  transform_barchart.pl
benches/: cipher.rs
results/: bench_output.txt  decrypt_OpenSSL aes256-cbc.txt  decrypt_OpenSSL aes256-ctr.txt  decrypt_OpenSSL aes256-gcm.txt  decrypt_OpenSSL camellia256-cbc.txt  decrypt_OpenSSL chacha20.txt  decrypt_OpenSSL chacha20poly1305.txt  decrypt_RustCrypto ascon128.txt  decrypt_RustCrypto chacha20.txt  decrypt_RustCrypto chacha20poly1305.txt  decrypt_RustCrypto rabbit.txt  decrypt_RustCrypto salsa20.txt  decrypt_RustCrypto xchacha20.txt  decrypt_RustCrypto xchacha20poly1305.txt  encrypt_OpenSSL aes256-cbc.txt  encrypt_OpenSSL aes256-ctr.txt  encrypt_OpenSSL aes256-gcm.txt  encrypt_OpenSSL camellia256-cbc.txt  encrypt_OpenSSL chacha20.txt  encrypt_OpenSSL chacha20poly1305.txt  encrypt_RustCrypto ascon128.txt  encrypt_RustCrypto chacha20.txt  encrypt_RustCrypto chacha20poly1305.txt  encrypt_RustCrypto rabbit.txt  encrypt_RustCrypto salsa20.txt  encrypt_RustCrypto xchacha20.txt  encrypt_RustCrypto xchacha20poly1305.txt
src/: gift.cpp  gift.rs
