[package]
name = "symmetric_crypto_bench"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "csv_output"] }
rand = "0.8.5"
openssl = "0.10.64"

cipher = "0.4.4"
ascon-aead = "0.4.2"
chacha20 = "0.9.1"
chacha20poly1305 = "0.10.1"
salsa20 = "0.10.2"
rabbit = "0.4.1"

[build-dependencies]
cc = "1.1.5"

[[bench]]
harness = false
name = "cipher"
